fix: adjust background color of full screen overlay for better visibility

--- a/src/components/BoardWidget.css
+++ b/src/components/BoardWidget.css
@@ -21,8 +21,8 @@
     z-index: 9;
     left: 0;
     top: 0;
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.7);
+
+    background-color: rgba(0, 0, 0, 0.4);
     overflow-x: hidden;
 
 }
